# tlp-battery-boost

./: .gitignore  404.html  CHANGELOG.md  README.md  battery_boost.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  style.css
api/__main__/: index.html
api/app/: index.html
api/authenticate/: index.html
api/constants/: index.html
api/helper_functions/: index.html
api/shell_commands/: index.html
api/tlp_parser/: index.html
appendix-api/: index.html
docs/: appendix-api.md  index.md  installation.md  troubleshooting.md  usage.md
docs/api/: __main__.md  app.md  authenticate.md  constants.md  helper_functions.md  shell_commands.md  tlp_parser.md
installation/: index.html
search/: search_index.json
src/battery_boost/: __init__.py  __main__.py  app.py  authenticate.py  constants.py  helper_functions.py  shell_commands.py  tlp_command.py  tlp_parser.py
troubleshooting/: index.html
usage/: index.html
